auther name update

--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
         </div>
         <div class="row mt-5">
             <div class="col text-center">
-                <h1>Welcome to Task Mate</h1>
+                <h1>Welcome to Task Mate Build by Kethak Phayade</h1>
                 <p class="lead">Your ultimate task management solution!</p> 
 
                 <a href="{% url 'todolist' %}" class="btn btn-primary btn-lg mt-3 shadow-sm">Go to Todo List</a>
